# svg2emb

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cubicbezier.hxx  embwrite.cxx  embwrite.hxx  fz2emb.cxx  mathtransm.hxx  mathvector.hxx  svg2emb.cxx
cgi/: svg2emb.cgi  svg2emb.html
libembroidery/: CMakeLists.txt
sample/: routetest.fzz
